relocates contrast to avoid download link

--- a/public/css/tachyon.scss
+++ b/public/css/tachyon.scss
@@ -1216,11 +1216,11 @@ canvas#pdf {
 
 .contrast {
     position: absolute;
-    right: 0px;
-    top: 47px;
+    right: 270px;
+    top: 3px;
     background: white;
-    border: 1px solid #e9e9e9;
-    padding: 5px 10px 5px 10px!important;
+    border: none!important;
+    padding: 5px 10px 5px 10px !important;
 }
 
 
